LA WAVE fonctionne // les zombies se détruisent

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/FPSproject.FPSprojectGameMode
+GlobalDefaultGameMode=/Game/FirstPersonCPP/Blueprints/BP_MyFPSprojectGameMode.BP_MyFPSprojectGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
